Project

General

Profile

Actions

Bug #22734

closed

cephfs-journal-tool: may got assertion failure due to not shutdown

Added by dongdong tao about 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,jewel
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
tools
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

```
2018-01-14T19:36:56.381 INFO:teuthology.orchestra.run.smithi139.stderr:Error loading journal: (2) No such file or directory, pass --force to forcibly reset this journal
2018-01-14T19:36:56.381 INFO:teuthology.orchestra.run.smithi139.stderr:2018-01-14 19:36:56.364 7fa6bf0bd780 -1 journal_reset: resetter::init failed: (2) No such file or directory
2018-01-14T19:36:56.381 INFO:teuthology.orchestra.run.smithi139.stderr:/build/ceph-13.0.0-4807-g0e4146b/src/osdc/Objecter.cc: In function 'virtual Objecter::~Objecter()' thread 7fa6bf0bd780 time 2018-01-14 19:36:56.367598
2018-01-14T19:36:56.381 INFO:teuthology.orchestra.run.smithi139.stderr:/build/ceph-13.0.0-4807-g0e4146b/src/osdc/Objecter.cc: 5019: FAILED assert(osd_sessions.empty())
2018-01-14T19:36:56.381 INFO:teuthology.orchestra.run.smithi139.stderr: ceph version 13.0.0-4807-g0e4146b (0e4146bdcdf2085bf017c20f0ad720ad3a49aa29) mimic (dev)
2018-01-14T19:36:56.381 INFO:teuthology.orchestra.run.smithi139.stderr: 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0xf5) [0x7fa6b5e3afa5]
2018-01-14T19:36:56.381 INFO:teuthology.orchestra.run.smithi139.stderr: 2: (Objecter::~Objecter()+0x16a3) [0x563d994da573]
2018-01-14T19:36:56.381 INFO:teuthology.orchestra.run.smithi139.stderr: 3: (Objecter::~Objecter()+0x9) [0x563d994da5b9]
2018-01-14T19:36:56.381 INFO:teuthology.orchestra.run.smithi139.stderr: 4: (MDSUtility::~MDSUtility()+0x22) [0x563d991f1132]
2018-01-14T19:36:56.382 INFO:teuthology.orchestra.run.smithi139.stderr: 5: (JournalTool::journal_reset(bool)+0xb6) [0x563d991cb526]
2018-01-14T19:36:56.382 INFO:teuthology.orchestra.run.smithi139.stderr: 6: (JournalTool::main_journal(std::vector<char const*, std::allocator<char const*> >&)+0x17f) [0x563d991cb83f]
2018-01-14T19:36:56.382 INFO:teuthology.orchestra.run.smithi139.stderr: 7: (JournalTool::main(std::vector<char const*, std::allocator<char const*> >&)+0x75d) [0x563d991c557d]
2018-01-14T19:36:56.382 INFO:teuthology.orchestra.run.smithi139.stderr: 8: (main()+0x262) [0x563d991c4bb2]
2018-01-14T19:36:56.382 INFO:teuthology.orchestra.run.smithi139.stderr: 9: (__libc_start_main()+0xf0) [0x7fa6b4ea8830]
2018-01-14T19:36:56.382 INFO:teuthology.orchestra.run.smithi139.stderr: 10: (_start()+0x29) [0x563d991c9599]
2018-01-14T19:36:56.382 INFO:teuthology.orchestra.run.smithi139.stderr: NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.
2018-01-14T19:36:56.382 INFO:teuthology.orchestra.run.smithi139.stderr:2018-01-14 19:36:56.364 7fa6bf0bd780 -1 /build/ceph-13.0.0-4807-g0e4146b/src/osdc/Objecter.cc: In function 'virtual Objecter::~Objecter()' thread 7fa6bf0bd780 time 2018-01-14 19:36:56.367598


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #22862: luminous: cephfs-journal-tool: may got assertion failure due to not shutdownResolvedPrashant DActions
Copied to CephFS - Backport #22863: jewel: cephfs-journal-tool: may got assertion failure due to not shutdownResolvedPrashant DActions
Actions #2

Updated by Patrick Donnelly about 6 years ago

  • Assignee set to dongdong tao
  • Backport set to luminous,jewel
  • Component(FS) tools added
Actions #3

Updated by Patrick Donnelly about 6 years ago

  • Status changed from New to Fix Under Review
Actions #4

Updated by Patrick Donnelly about 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Nathan Cutler about 6 years ago

  • Copied to Backport #22862: luminous: cephfs-journal-tool: may got assertion failure due to not shutdown added
Actions #6

Updated by Nathan Cutler about 6 years ago

  • Copied to Backport #22863: jewel: cephfs-journal-tool: may got assertion failure due to not shutdown added
Actions #7

Updated by Nathan Cutler about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF