cephfs-journal-tool: move shutdown to the deconstructor of MDSUtility

Fixes: http://tracker.ceph.com/issues/22734
Signed-off-by: dongdong tao <tdd21151186@gmail.com>