src/tools/cephfs/MDSUtility.h
@@ -42,6 +42,7 @@ protected:
 
   Context *waiting_for_mds_map;
 
+  bool inited;
 public:
   MDSUtility();
   ~MDSUtility();
